Backport of SVN commit 942194: - Write the settings to the disk as soon as "Apply" or "OK" has been pressed inside a settings dialog. - Assure that the settings are saved in the DolphinPart destructor for settings that are changed outside the settings dialog (e. g. by using Ctrl + mouse wheel for adjusting the icon size).

Thanks to Frank Reininghaus and David Faure for the analyses.

BUG: 175085

svn path=/branches/KDE/4.2/kdebase/apps/; revision=942229